jenkins.yaml
---
# Source: jenkins-k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-k8s-jenkins-k8s
  labels:
    app: jenkins-k8s
    chart: jenkins-k8s-0.1.0
    release: jenkins-k8s
    heritage: Tiller
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: jenkins-k8s
    release: jenkins-k8s
---
# Source: jenkins-k8s/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-k8s-jenkins-k8s
  labels:
    app: jenkins-k8s
    chart: jenkins-k8s-0.1.0
    release: jenkins-k8s
    heritage: Tiller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins-k8s
        release: jenkins-k8s
    spec:
      imagePullSecrets:
      - name: docker-reg-secret
      containers:
      - name: dind-daemon
        image: "docker:18.02.0-dind"
        resources:
          requests:
            cpu: 20m
            memory: 512Mi
        securityContext:
          privileged: true
        volumeMounts:
        - name: docker-graph-storage
          mountPath: /var/lib/docker
      - name: jenkins-k8s
        image: "harbor.pcfgcp.pkhamdee.com/library/jenkins:lts-k8s"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jenkins-home
          mountPath: "/var/jenkins_home"
        resources:
          limits:
            cpu: 300m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 512Mi
          
      volumes:
      - name: docker-graph-storage
        emptyDir: {}
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-k8s
